# python_task1

./: README.md  ci.sh  main.py  pyproject.toml
Les10/: LEs10_1_3.py  Les10_1.py  Les10_1_1.py  Les10_1_2.py  Les10_2.py  Les10_3.py  Les10_4.py  Les10_5.py  configLes10.py
Les10_16_11/: Les10_1.py  Les10_2.py  Les10_3.py  Les10_4.py  Les10_5.py  Pres.py
Les13/: Les13_1.py  Les13_2.py  Les13_3.py  Les13_4.py  Les13_5.py  Les13_6.py
Les14/: Les14_1.py
Les15/: Les15_1.py  Les15_2.py  Les15_3.py  Les15_4.py
Les15l/: Les15_1.py  Les15_2.py
Les16/: Les16_1.py  Les16_2.py  Les16_3.py  Les16_4.py  Les16_5.py  token_id.py
Les16__/: Les16_1.py  cv2_helper.py  data.py
Les17/: Les17_1.py  cvzon_helper.py  data.py
Les19/: data.py  example_1.py  les19.py  les19_1.py  les19_2.py  les19_3.py  service.py
Les19_/: Les19_1.py  Les19_2.py  data.py  example.py
Les20/: mainBot.py  mainBot_api.py  mainBots.py  service.py  service_1.py  tasks.py
Les22/: Les22.py  data.py  mainBots.py
Les23/: data.csv  detectorPose.py  game1.py  saveDataMockApi.py  saveInfoCSV.py  settings.py
Les23/ratings/: models.py
Les8/: Les8_1.py  Les8_2.py  Les8_3.py
les18/: Les18_1.py  Les18_2.py  cv2_helper.py  cvzon_helper.py  data.py
les20Otr/: service.py
les9/: Les9_2.py  Les9__1.py
otrabotka0102/: otrabotka.py
