[project]
name = "numbers"
version = "0.1.0"
requires-python = ">=3.9"

# ============================================================================
# НАСТРОЙКИ RUFF
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py39"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

# ============================================================================
# НАСТРОЙКИ ЛИНТЕРА
# ============================================================================

[tool.ruff.lint]
# Группа "F" включает F401, F841 и другие полезные правила Pyflakes
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes (включая F401, F841)
    "I",   # isort
    "UP",  # pyupgrade
]

ignore = [
    "E501",  # line too long (исправляется форматтером)
]

fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"__init__.py" = ["F401"]

# ============================================================================
# НАСТРОЙКИ ФОРМАТТЕРА
# ============================================================================

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false